--- a/legmma.ipynb
+++ b/legmma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,8 @@
     "REPLACE_NO_SPACE = re.compile(\"(\\d)|(\\.)|(\\;)|(\\:)|(\\!)|(\\')|(\\?)|(\\,)|(\\\")|(\\|)|(\\()|(\\))|(\\[)|(\\])|(\\%)|(\\$)|(\\>)|(\\<)|(\\{)|(\\})\")\n",
     "REPLACE_WITH_SPACE = re.compile(\"(<br\\s/><br\\s/?)|(-)|(/)|(:).\")\n",
     "\n",
-    "train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=10)\n",
+    "train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=1000)\n",
+    "#train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=10)\n",
     "\n",
     "\n",
     "train_tweet = clean_tweets(train[\"text\"])\n",
@@ -73,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 5)\n"
+      "(945, 5)\n"
      ]
     }
    ],
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,35 +665,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 514,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object, got 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[197], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Perform stemming\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m train[\u001b[39m'\u001b[39m\u001b[39mstemmed\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m train[\u001b[39m'\u001b[39;49m\u001b[39mtokenize\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mapply(stemmer)\u001b[39m.\u001b[39;49mapply(nltk\u001b[39m.\u001b[39;49mtokenize\u001b[39m.\u001b[39;49mWhitespaceTokenizer()\u001b[39m.\u001b[39;49mtokenize) \n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\series.py:4771\u001b[0m, in \u001b[0;36mSeries.apply\u001b[1;34m(self, func, convert_dtype, args, **kwargs)\u001b[0m\n\u001b[0;32m   4661\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply\u001b[39m(\n\u001b[0;32m   4662\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m   4663\u001b[0m     func: AggFuncType,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4666\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[0;32m   4667\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m Series:\n\u001b[0;32m   4668\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   4669\u001b[0m \u001b[39m    Invoke function on values of Series.\u001b[39;00m\n\u001b[0;32m   4670\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4769\u001b[0m \u001b[39m    dtype: float64\u001b[39;00m\n\u001b[0;32m   4770\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4771\u001b[0m     \u001b[39mreturn\u001b[39;00m SeriesApply(\u001b[39mself\u001b[39;49m, func, convert_dtype, args, kwargs)\u001b[39m.\u001b[39;49mapply()\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\apply.py:1123\u001b[0m, in \u001b[0;36mSeriesApply.apply\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1120\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_str()\n\u001b[0;32m   1122\u001b[0m \u001b[39m# self.f is Callable\u001b[39;00m\n\u001b[1;32m-> 1123\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\apply.py:1174\u001b[0m, in \u001b[0;36mSeriesApply.apply_standard\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1172\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1173\u001b[0m         values \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mastype(\u001b[39mobject\u001b[39m)\u001b[39m.\u001b[39m_values\n\u001b[1;32m-> 1174\u001b[0m         mapped \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer(\n\u001b[0;32m   1175\u001b[0m             values,\n\u001b[0;32m   1176\u001b[0m             f,\n\u001b[0;32m   1177\u001b[0m             convert\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconvert_dtype,\n\u001b[0;32m   1178\u001b[0m         )\n\u001b[0;32m   1180\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(mapped) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(mapped[\u001b[39m0\u001b[39m], ABCSeries):\n\u001b[0;32m   1181\u001b[0m     \u001b[39m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001b[39;00m\n\u001b[0;32m   1182\u001b[0m     \u001b[39m#  See also GH#25959 regarding EA support\u001b[39;00m\n\u001b[0;32m   1183\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39m_constructor_expanddim(\u001b[39mlist\u001b[39m(mapped), index\u001b[39m=\u001b[39mobj\u001b[39m.\u001b[39mindex)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\_libs\\lib.pyx:2924\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tokenize\\regexp.py:127\u001b[0m, in \u001b[0;36mRegexpTokenizer.tokenize\u001b[1;34m(self, text)\u001b[0m\n\u001b[0;32m    125\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_gaps:\n\u001b[0;32m    126\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_discard_empty:\n\u001b[1;32m--> 127\u001b[0m         \u001b[39mreturn\u001b[39;00m [tok \u001b[39mfor\u001b[39;00m tok \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_regexp\u001b[39m.\u001b[39msplit(text) \u001b[39mif\u001b[39;00m tok]\n\u001b[0;32m    128\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    129\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_regexp\u001b[39m.\u001b[39msplit(text)\n",
-      "\u001b[1;31mTypeError\u001b[0m: expected string or bytes-like object, got 'list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Perform stemming\n",
     "train['stemmed'] = train['tokenize'].apply(stemmer)\n",
-    "train['stemmed'] = train['stemmed'].apply(nltk.tokenize.WhitespaceTokenizer().tokenize) \n"
+    "#train['stemmed'] = train['stemmed'].apply(nltk.tokenize.WhitespaceTokenizer().tokenize) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
